--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,9 +1,12 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+    maven { url = 'https://maven.brott.dev/' }
+    maven { url 'https://jitpack.com' }
     flatDir {
         dirs rootProject.file('libs')
     }
+
 }
 
 dependencies {
@@ -16,7 +19,9 @@ dependencies {
     implementation 'org.firstinspires.ftc:Hardware:8.0.0'
     implementation 'org.firstinspires.ftc:FtcCommon:8.0.0'
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.2.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'org.firstinspires.ftc:gameAssets-PowerPlay:1.0.0'
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.6'
+    implementation 'com.github.deltacv:EOCV-Sim:3.3.2'
 }
 
